--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hi-Draw-NFT</title>
+        <title>Home</title>
             <link rel="icon" type="image/svg" href="favicon.svg">
 <style>
 body {
@@ -969,3 +969,4 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 
 </body>
 </html>
+
