--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ body {
         <span title="Hi-I">Coll.I</span>
             <a href="" style="text-decoration: none; "target="_blank" title="Hi-I Collection Drawing"
                 data-popup-title="● Hi-I Drawing"
-                    data-popup-body="After Mint 30000 Hi-I<br><br>It's Time To Buy Hi-I<br><br>Marketplace Is Active<br><br><a href='https://opensea.io/collection/hi-draw-nft-i?sortDirection=desc' class='btn-pop' target='_blank'>Marketplace</a><br><a href='file:///C:/Users/RAYANAP/Desktop/HiDrawNFT%20Site/i.html' class='btn-pop' target='_blank'>Hi-I DRAWING</a>">
+                    data-popup-body="After Mint 30000 Hi-I<br><br>It's Time To Buy Hi-I<br><br>Marketplace Is Active<br><br><a href='https://opensea.io/collection/hi-draw-nft-i?sortDirection=desc' class='btn-pop' target='_blank'>Marketplace</a><br><a href='https://github.com/hi-draw-nft/home/blob/main/i.html' class='btn-pop' target='_blank'>Hi-I DRAWING</a>">
                 <span style="color: #00ff00;" class="blink">●</span><span style="color: #00ff00;"> Hi-I DRAWING</span>
             </a>
         </div>
@@ -969,4 +969,5 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 
 </body>
 </html>
+
 
