--- a/i.html
+++ b/i.html
@@ -463,7 +463,7 @@ body {
     border: 3px solid #ffffff;
     padding-bottom: 33px;
     margin-bottom: 20px;
-    height: 25px;
+    height: auto;
     max-height: 150px;
     width: 66%;
     display: inline-block;
@@ -1304,6 +1304,7 @@ body {
 </body>
 
 </html>
+
 
 
 
