--- a/i.html
+++ b/i.html
@@ -462,6 +462,7 @@ body {
 .result-box {
     border: 3px solid #ffffff;
     padding-bottom: 33px;
+    padding-top: 33px;
     margin-bottom: 20px;
     height: auto;
     max-height: 150px;
@@ -1304,6 +1305,7 @@ body {
 </body>
 
 </html>
+
 
 
 
