--- a/i.html
+++ b/i.html
@@ -629,7 +629,7 @@ body {
             <a href="https://opensea.io/0x840753e7c047ca8c5931b78608713050041abf66/created" class="double-button" title="OpenSea collections" alt="Hi-Draw-NFT OpenSea collections" target="_blank">
                 <img src="opensea.svg" alt="Hi-Draw-NFT">
             </a>
-            <a href="https://hi-draw-nft.github.io/" class="double-button" title="Hi-Draw-NFT" alt="Hi-Draw-NFT Home">
+            <a href="https://hi-draw-nft.github.io/home" class="double-button" title="Hi-Draw-NFT" alt="Hi-Draw-NFT Home">
                 <img src="hi.svg" alt="Hi-Draw-NFT">
             </a>
         </div>
@@ -1302,6 +1302,7 @@ body {
 </body>
 
 </html>
+
 
 
 
