--- a/i.html
+++ b/i.html
@@ -614,7 +614,7 @@ body {
 
     <div class="main-header">
         <h1 class="project-title">
-            <a href="file:///C:/Users/RAYANAP/Desktop/HiDrawNFT%20Site/h.html" style="text-decoration: none;" target="_blank" title="Hi-Draw-NFT">
+            <a href="https://hi-draw-nft.github.io/" style="text-decoration: none;" target="_blank" title="Hi-Draw-NFT">
                 <span style="color: #00ff00;" class="blink">● </span><span style="color: #ffffff;">Hi-Draw-NFT</span>
             </a>
         </h1>
@@ -1302,6 +1302,7 @@ body {
 </body>
 
 </html>
+
 
 
 
