--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ body {
 <div class="container">
     <div class="main-header">
         <h1 class="project-title">
-            <a href="index.html" style="text-decoration: none;" target="_blank" title="Hi-Draw-NFT">
+            <a href="" style="text-decoration: none;" target="_blank" title="Hi-Draw-NFT">
                 <span style="color: #00ff00;" class="blink">● </span><span style="color: #ffffff;">Hi-Draw-NFT</span>
             </a>
         </h1>
@@ -969,6 +969,7 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 
 </body>
 </html>
+
 
 
 
