--- a/index.html
+++ b/index.html
@@ -392,9 +392,8 @@ body {
     }
 
 .popup-content::-webkit-scrollbar {
-    width: 10px;
-        background: #ffffff;
-            transition: 0.3s;
+    width: 0px;
+        background: none;
     }
 
 .popup-content::-webkit-scrollbar-thumb {
@@ -403,14 +402,14 @@ body {
     }
 
 .popup-content:hover::-webkit-scrollbar {
-    width: 8px;
-        opacity: 1;
+    width: 0px;
+        opacity: 0;
     }
 
 .popup-content:hover::-webkit-scrollbar-thumb {
-    background-color: #ffffff !important;
-        border-radius: 4px #ffffff;
-            border: 10px solid #ffffff;
+    background-color: none;
+        border-radius: none;
+            border: none;
     }
 
 #popupBody {
@@ -969,6 +968,7 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 
 </body>
 </html>
+
 
 
 
