--- a/i.html
+++ b/i.html
@@ -565,19 +565,18 @@ body {
 }
 
 .popup-content::-webkit-scrollbar {
-    width: 10px;
-    background: #ffffff;
-    transition: 0.3s;
+    width: 0px;
+    background: none;
 }
 
 .popup-content::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0) !important; 
-    border: none !important;
+    background-color: none; 
+    border: none;
 }
 
 .popup-content:hover::-webkit-scrollbar {
-    width: 8px;
-    opacity: 1;
+    width: 0px;
+    opacity: 0;
 }
 
 #popupBody {
@@ -1302,6 +1301,7 @@ body {
 </body>
 
 </html>
+
 
 
 
