--- a/i.html
+++ b/i.html
@@ -10,7 +10,7 @@
 body {
     background-color: #000000;
     color: #ffffff;
-    font-family: 'Courier', Courier;
+    font-family:  'Courier New', Courier, monospace;
     margin: 0;
     padding: 12px;
     display: flex;
@@ -209,7 +209,7 @@ body {
 
 .lv-btn {
     display: block;
-    font-family:'Courier', Courier;
+    font-family: 'Courier New', Courier, monospace;
     background: #00ff00;
     color: #000000;
     text-decoration: none;
@@ -235,7 +235,7 @@ body {
     display: block;
     width: 32.5% ;
     height: fit-content;
-    font-family:'Courier', Courier;
+    font-family: 'Courier New', Courier, monospace;
     padding-top: 6px;
     padding-bottom: 6px ;
     margin-bottom: 5px;
@@ -415,7 +415,7 @@ body {
 }
 
 .nav-item {
-    font-family: 'Courier', Courier;
+    font-family: 'Courier New', Courier, monospace;
     color: #ffffff;
     padding: 5px 4px;
     margin: 2px 4px;
@@ -532,7 +532,7 @@ body {
 #popupModal {
     background: #000000;
     color: #00ff00;
-    font-family: 'Courier', Courier;
+    font-family: 'Courier New', Courier, monospace;
     font-weight:lighter;
     border: 4px solid #ffffff;
     box-shadow: 8px 8px 0px #00ff00;
@@ -803,9 +803,9 @@ body {
 <div id="popupOverlay">
     <div id="popupModal">
         <span class="popup-close" title="Close">&times;</span>
-        <h2 id="popupTitle" style="font-family: 'Courier', Courier; font-size: 1.3rem; text-align: center; color: #ffffff; margin-top: 0; padding-bottom: 25px;"></h2>
+        <h2 id="popupTitle" style="font-family: 'Courier New', Courier, monospace; font-size: 1.3rem; text-align: center; color: #ffffff; margin-top: 0; padding-bottom: 25px;"></h2>
         <div class="popup-content">
-            <p id="popupBody" style="font-family: 'Courier', Courier;"></p>
+            <p id="popupBody" style="font-family: 'Courier New', Courier, monospace;"></p>
         </div>
     </div>
 </div>
@@ -1301,6 +1301,7 @@ body {
 </body>
 
 </html>
+
 
 
 
