--- a/i.html
+++ b/i.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi-I-Drawing</title>
+    <title>Hi-I</title>
     <link rel="icon" type="image/svg" href="favicon.svg">
 <style>
 /* --- استایل‌های اصلی --- */
@@ -1301,6 +1301,7 @@ body {
 </body>
 
 </html>
+
 
 
 
