--- a/i.html
+++ b/i.html
@@ -741,11 +741,11 @@ body {
             <span style="color: #00ff00;">• Hi-I DRAWING</span>
         </div>
 
-        <a href="" class="btn btn-primary btn-box" target="_blank"  title="View & Download Daily Results "
+        <a href="" class="btn btn-primary btn-box" target="_blank"  title="How To View & Download Daily Results "
         data-popup-title="How To Download?"    
         data-popup-body=""
         >
-                <span>Daily Results <span class="txt-type" data-wait="3000" data-words='["Download","View"]'</span>
+                <span>How To <span class="txt-type" data-wait="3000" data-words='["Download","View"]'</span><span> Daily Results</span>
             </a>
 
 
@@ -1301,6 +1301,7 @@ body {
 </body>
 
 </html>
+
 
 
 
