--- a/i.html
+++ b/i.html
@@ -745,7 +745,7 @@ body {
         data-popup-title="How To Download?"    
         data-popup-body=""
         >
-                <span>How To <span class="txt-type" data-wait="3000" data-words='["Download","View"]'</span><span> Daily Results</span>
+                <span>How To <span class="txt-type" data-wait="3000" data-words='["Download","View"]'</span> Daily Results</span>
             </a>
 
 
@@ -1301,6 +1301,7 @@ body {
 </body>
 
 </html>
+
 
 
 
