--- a/i.html
+++ b/i.html
@@ -767,10 +767,10 @@ body {
 <!-- --- بخش جدید Free Draw --- -->
     <section class="free-draw-section">
         <h2 class="text-xl text-red-500 border-b border-dashed border-red-500 pb-1 mb-1">
-Free Draw
+Gift NFT
             </h2>
             <p class="text-red-500 mb-2 text-sm">
-Add Your Wallet Address For Free Draw
+Add Wallet Address For Gifts NFT
             </p>
 
             <form id="walletForm">
@@ -1498,4 +1498,5 @@ Add Your Wallet Address For Free Draw
 </script>
 
 </body>
+
 </html>
