--- a/index.html
+++ b/index.html
@@ -769,10 +769,10 @@ body {
 <!-- --- بخش جدید Free Draw --- -->
     <section class="free-draw-section">
         <h2 class="text-xl text-red-500 border-b border-dashed border-red-500 pb-1 mb-1">
-Free Draw
+Gift NFTs
             </h2>
             <p class="text-red-500 mb-2 text-sm">
-Add Your Wallet Address For Free Draw
+Add Wallet Address For Gift NFTs
             </p>
 
             <form id="walletForm">
@@ -1350,4 +1350,5 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 </script>
 
 </body>
+
 </html>
