--- a/i.html
+++ b/i.html
@@ -767,10 +767,10 @@ body {
 <!-- --- بخش جدید Free Draw --- -->
     <section class="free-draw-section">
         <h2 class="text-xl text-red-500 border-b border-dashed border-red-500 pb-1 mb-1">
-Gift NFT
+Gift NFTs
             </h2>
             <p class="text-red-500 mb-2 text-sm">
-Add Wallet Address For Gifts NFT
+Add Wallet Address For Gift NFTs
             </p>
 
             <form id="walletForm">
@@ -1500,3 +1500,4 @@ Add Wallet Address For Gifts NFT
 </body>
 
 </html>
+
