--- a/i.html
+++ b/i.html
@@ -971,7 +971,7 @@ Add Wallet Address For Gift NFTs
         const button = document.getElementById('addButton');
         button.disabled = isLoading;
         document.getElementById('loaderIcon').classList.toggle('hidden', !isLoading);
-        document.getElementById('buttonText').textContent = isLoading ? 'Checking...' : '+ ADD WALLET';
+        document.getElementById('buttonText').textContent = isLoading ? '' : '+ ADD WALLET';
     }
 
     // تابع اعتبارسنجی آدرس
@@ -1500,4 +1500,5 @@ Add Wallet Address For Gift NFTs
 </body>
 
 </html>
+
 
