--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
         const button = document.getElementById('addButton');
         button.disabled = isLoading;
         document.getElementById('loaderIcon').classList.toggle('hidden', !isLoading);
-        document.getElementById('buttonText').textContent = isLoading ? 'Checking...' : '+ ADD WALLET';
+        document.getElementById('buttonText').textContent = isLoading ? '' : '+ ADD WALLET';
     }
 
     // تابع اعتبارسنجی آدرس
@@ -1352,3 +1352,4 @@ Enter 24/7 Active Ecosystem Hi-draw-NFT.
 </body>
 
 </html>
+
