--- a/Hi-I.html
+++ b/Hi-I.html
@@ -1774,7 +1774,7 @@ body {
             "July", "August", "September", "October", "November", "December"
         ];
 
-        const RESULTS_BASE_PATH = "Hi-I-Draw-Results";
+        const RESULTS_BASE_PATH = "Hi-I-TXDraw-Results";
         const PDF_FILENAME_PREFIX = "Hi-Draw-NFT Hi-I ";
         const YEAR_FOLDER_PREFIX = "Hi-I ";
 
@@ -2012,4 +2012,5 @@ body {
 
 
 </html>
+
 
