--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@ body {
         <span title="Hi-I">Coll.I</span>
             <a href="" style="text-decoration: none; "target="_blank" title="Hi-I Collection Draw"
                 data-popup-title="● Hi-I Draw"
-                    data-popup-body="After Mint 30000 Hi-I<br><br>It's Time To Buy Hi-I<br><br>Marketplace Is Active<br><br><a href='https://opensea.io/collection/hi-draw-nft-i?sortDirection=desc' class='btn-pop' target='_blank'>Marketplace</a><br><a href='Hi-I.html' class='btn-pop' target='_blank'>Hi-I DRAW</a>">
+                    data-popup-body="After Mint 30000 Hi-I<br><br>It's Time To Buy Hi-I<br><br>Marketplace Is Active<br><br><a href='https://opensea.io/collection/hi-draw-nft-i?sortDirection=desc' class='btn-pop' target='_blank'>Marketplace</a><br><a href='Hi-I TX-DRAW.html' class='btn-pop' target='_blank'>Hi-I DRAW</a>">
                 <span style="color: #00ff00;" class="blink">●</span>
                 <span style="color: #00ff00;"> Hi-I DRAW</span>
             </a>
@@ -1725,4 +1725,5 @@ body {
 
 
 </html>
+
 
